--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -24,21 +24,15 @@
             <div id="block-01" class="product-description">
                 <div class="container container--text">
                     <div class="product-description-wrap">
-                        <div class="product-description-text">
-                            <p>Sed commodo aliquam dui ac porta. Fusce ipsum felis, imperdiet at posuere ac, viverra at mauris. Maecenas tincidunt ligula a sem vestibulum pharetra. Maecenas auctor tortor lacus, nec laoreet nisi porttitor vel. Etiam tincidunt metus vel dui interdum sollicitudin. Mauris sem ante, vestibulum nec orci vitae, aliquam mollis lacus. Sed et condimentum arcu, id molestie tellus. Nulla facilisi. Nam scelerisque vitae justo a convallis. Morbi urna ipsum, placerat quis commodo quis, egestas elementum leo. Donec convallis mollis enim. Aliquam id mi quam. Phasellus nec fringilla elit.</p>
-                            <p>Nulla mauris tellus, feugiat quis pharetra sed, gravida ac dui. Sed iaculis, metus faucibus elementum tincidunt, turpis mi viverra velit, pellentesque tristique neque mi eget nulla. Proin luctus elementum neque et pharetra. </p>
-                        </div>
-                        <div class="product-description-benefits">
-                            <ul class="product-description-list">
-                                <li class="product-description-list-item">100 g of fresh leaves provides.</li>
-                                <li class="product-description-list-item">Aliquam ac est at augue volutpat elementum.</li>
-                                <li class="product-description-list-item">Quisque nec enim eget sapien molestie.</li>
-                                <li class="product-description-list-item">Proin convallis odio volutpat finibus posuere.</li>
-                            </ul>
-                        </div>
-                        <div class="product-description-text-end">
-                            <p>Cras et diam maximus, accumsan sapien et, sollicitudin velit. Nulla blandit eros non turpis lobortis iaculis at ut massa. </p>
-                        </div>
+                        <p>Sed commodo aliquam dui ac porta. Fusce ipsum felis, imperdiet at posuere ac, viverra at mauris. Maecenas tincidunt ligula a sem vestibulum pharetra. Maecenas auctor tortor lacus, nec laoreet nisi porttitor vel. Etiam tincidunt metus vel dui interdum sollicitudin. Mauris sem ante, vestibulum nec orci vitae, aliquam mollis lacus. Sed et condimentum arcu, id molestie tellus. Nulla facilisi. Nam scelerisque vitae justo a convallis. Morbi urna ipsum, placerat quis commodo quis, egestas elementum leo. Donec convallis mollis enim. Aliquam id mi quam. Phasellus nec fringilla elit.</p>
+                        <p>Nulla mauris tellus, feugiat quis pharetra sed, gravida ac dui. Sed iaculis, metus faucibus elementum tincidunt, turpis mi viverra velit, pellentesque tristique neque mi eget nulla. Proin luctus elementum neque et pharetra. </p>
+                        <ul>
+                            <li>100 g of fresh leaves provides.</li>
+                            <li>Aliquam ac est at augue volutpat elementum.</li>
+                            <li>Quisque nec enim eget sapien molestie.</li>
+                            <li>Proin convallis odio volutpat finibus posuere.</li>
+                        </ul>
+                        <p>Cras et diam maximus, accumsan sapien et, sollicitudin velit. Nulla blandit eros non turpis lobortis iaculis at ut massa. </p>
                     </div>
                 </div>
             </div>
